# ask-me-anywhere

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  README.zh.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: docs.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: inbox.rs  lib.rs  model.rs  net.rs
crates/core/tests/: sync.rs
deploy/relay/: Dockerfile  README.md  docker-compose.yml  iroh-relay.service  relay.toml
deploy/relay-muvee/: Dockerfile  README.md  relay.toml
deploy/webhook/: Dockerfile  README.md
docs/: index.en.md  index.zh.md
docs/integrator/: index.en.md  index.zh.md
docs/ops/: index.en.md  index.zh.md
docs/reference/: iroh-docs-0.98-api.md
docs/user/: index.en.md  index.zh.md
flutter_app/: pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/integration_test/: inbox_test.dart  ui_test.dart
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/src/: a2ui_functions.dart  a2ui_gallery.dart  a2ui_sample.dart
flutter_app/lib/src/android/: overlay_bridge.dart  overlay_bubble.dart  overlay_host.dart  (+1 more)
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/flutter/: generated_plugins.cmake
flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_app/macos/Runner/: AppDelegate.swift  MainFlutterWindow.swift
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/rust/: Cargo.toml
flutter_app/rust/src/: android_jni.rs  frb_generated.rs  lib.rs
flutter_app/rust/src/api/: inbox.rs  mod.rs  simple.rs
flutter_app/rust_builder/: pubspec.yaml
flutter_app/rust_builder/android/: build.gradle  settings.gradle
flutter_app/rust_builder/ios/: ama_bridge.podspec
flutter_app/rust_builder/linux/: CMakeLists.txt
flutter_app/rust_builder/macos/: ama_bridge.podspec
flutter_app/rust_builder/windows/: CMakeLists.txt
flutter_app/test/: a2ui_gallery_test.dart  ama_attachment_test.dart  ama_choice_test.dart  assistant_controller_test.dart  assistant_surface_test.dart  card_data_bridge_test.dart  card_detail_screen_test.dart  card_detail_view_test.dart  card_notifier_test.dart  confirm_gate_test.dart  guard_plan_cards_test.dart  join_screen_test.dart  onboarding_gate_test.dart  overlay_bridge_test.dart  pairing_screen_test.dart  queue_tabs_test.dart  scan_screen_test.dart
flutter_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter_app/windows/runner/: Runner.rc
scripts/: connect-source-demo.sh  sample-github-pr.json
(+29 files in other folders)
