[package]
name = "ama-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ama"
path = "src/main.rs"

[dependencies]
ama-core = { path = "../core" }
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
futures-lite = "2.6"
iroh = "0.98.2"
qrcode = "0.14"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
