[package]
name = "ama-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
futures-lite = "2.6"
iroh = "0.98.2"
iroh-blobs = "0.100.0"
iroh-docs = "0.98.0"
iroh-gossip = "0.98.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
iroh = "0.98.2"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
