[package]
name = "ama_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ama-core = { path = "../../crates/core" }
anyhow = "1.0.102"
flutter_rust_bridge = "=2.12.0"
serde_json = "1.0.150"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
