[package]
name = "ama_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ama-core = { path = "../../crates/core" }
anyhow = "1.0.102"
flutter_rust_bridge = "=2.12.0"
futures-lite = "2"
serde_json = "1.0.150"

# Android-only: register the JavaVM + app Context with ndk_context so iroh's
# network watcher can read ConnectivityManager (see src/android_jni.rs).
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
